--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <section id="home" class="section section--hero">
       <div class="container hero">
         <div class="hero__text">
-          <p class="pill">Soft Serve Truck • Woodland Park, NJ</p>
+          <p class="pill">Soft Serve Truck • Woodland Park Area</p>
           <h1>Soft Serve. <span class="gradient">Big Smiles.</span></h1>
-          <p class="lede">Catch our truck in Woodland Park and nearby towns—classic cones, sundaes, and swirls.</p>
+          <p class="lede">Catch our truck in the Woodland Park area—classic cones, sundaes, and swirls.</p>
           <div class="actions">
             <a class="btn btn--primary" href="#menu">🍦 View Menu</a>
             <a class="btn btn--secondary" id="hero-call" href="tel:+19739076000">📞 Call Now</a>
@@ -50,7 +50,7 @@
         <div>
           <p class="pill pill--soft">Now Scooping</p>
           <h2 id="status-text">Open • Closes 9 PM</h2>
-          <p class="muted">Serving Woodland Park and nearby towns. Follow us for today’s location.</p>
+          <p class="muted">Serving the Woodland Park area. Follow us for today's location.</p>
           <div class="actions">
             <a class="btn btn--primary" id="directions-btn" href="#">📍 Directions</a>
             <a class="btn btn--ghost" id="status-call" href="tel:+19739076000">Call (973) 907-6000</a>
@@ -148,11 +148,11 @@
     <div class="container footer__grid">
       <div>
         <h3>Lickety Split</h3>
-        <p class="muted">Soft serve ice cream truck serving Woodland Park, NJ and nearby towns.</p>
+        <p class="muted">Soft serve ice cream truck serving the Woodland Park area.</p>
       </div>
       <div>
         <h4>Visit</h4>
-        <p id="footer-address">85 Pompton Ave, Woodland Park, NJ 07424</p>
+        <p id="footer-address">Woodland Park Area</p>
         <p id="footer-hours" class="muted">Open • Closes 9 PM</p>
       </div>
       <div>
