Fix CSS gradient property, add truck image, update menu with correct pricing

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
           </div>
         </div>
         <div class="hero__card">
-          <div class="hero__emoji">🍦</div>
-          <p class="hero__title">Photo Coming Soon!</p>
-          <p class="hero__caption">Ice cream truck hero image</p>
+          <img src="truck.webp" alt="Lickety Split Ice Cream Truck" class="hero__img">
         </div>
       </div>
     </section>
@@ -64,8 +62,8 @@
       <div class="container">
         <header class="section__header">
           <p class="pill">Our Menu</p>
-          <h2>Soft serve, sundaes, shakes, toppings</h2>
-          <p class="muted">Fan favorites plus your pick of toppings.</p>
+          <h2>Fresh soft serve ice cream</h2>
+          <p class="muted">Cones, sundaes, shakes, and more.</p>
         </header>
 
         <div class="grid" id="featured-grid"></div>
