Redesign menu layout: uniform card sizing, better spacing, clean price display

--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
           <p class="muted">Cones, sundaes, shakes, and more.</p>
         </header>
 
-        <div class="grid" id="featured-grid"></div>
-
         <div class="tabs" id="menu-tabs"></div>
-        <div class="grid grid--3" id="menu-items"></div>
+        <div class="menu-grid" id="menu-items"></div>
       </div>
     </section>
 
