Remove social media follow references, replace with call us messaging

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div>
           <p class="pill pill--soft">Now Scooping</p>
           <h2 id="status-text">Open • Closes 9 PM</h2>
-          <p class="muted">Serving the Woodland Park area. Follow us for today's location.</p>
+          <p class="muted">Serving the Woodland Park area. Call us to find out where we are today!</p>
           <div class="actions">
             <a class="btn btn--primary" id="directions-btn" href="#">📍 Directions</a>
             <a class="btn btn--ghost" id="status-call" href="tel:+19739076000">Call (973) 907-6000</a>
@@ -79,8 +79,8 @@
           <p class="muted">From checking hours to enjoying your swirl.</p>
         </header>
         <div class="grid grid--4" id="steps-grid">
-          <article class="card card--lift"><div class="step">1</div><h3>Check Hours</h3><p>We’re usually open until 9 PM.</p></article>
-          <article class="card card--lift"><div class="step">2</div><h3>Follow Us</h3><p>Get daily location updates.</p></article>
+          <article class="card card--lift"><div class="step">1</div><h3>Check Hours</h3><p>We're usually open until 9 PM.</p></article>
+          <article class="card card--lift"><div class="step">2</div><h3>Call Us</h3><p>Find out where we are today.</p></article>
           <article class="card card--lift"><div class="step">3</div><h3>Find the Truck</h3><p>Look for our colorful truck.</p></article>
           <article class="card card--lift"><div class="step">4</div><h3>Order & Enjoy</h3><p>Pick your favorite treat.</p></article>
         </div>
@@ -131,7 +131,6 @@
           <p class="muted">Find us today—or book us for your next event.</p>
           <div class="actions">
             <a class="btn btn--secondary" id="contact-call" href="tel:+19739076000">Call Now</a>
-            <a class="btn btn--ghost" id="contact-follow" href="#">Follow for Locations</a>
             <a class="btn btn--outline" href="#booking">Book the Truck</a>
           </div>
         </div>
