Add Home to footer quick links and update email to Ramzi.musa500@gmail.com

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         <div>
           <p class="pill pill--soft">Book the Truck</p>
           <h2>Perfect for parties and events</h2>
-          <p class="muted">Birthdays, school events, corporate gatherings, and more. Call or email and we’ll confirm within 24–48 hours.</p>
+          <p class="muted">Birthdays, school events, corporate gatherings, and more. Call or email and we'll confirm within 24–48 hours.</p>
           <div class="actions">
             <a class="btn btn--primary" id="book-call" href="tel:+19739076000">📞 Call to Book</a>
-            <a class="btn btn--outline" href="mailto:info@example.com">✉️ Email Us</a>
+            <a class="btn btn--outline" href="mailto:Ramzi.musa500@gmail.com">✉️ Email Us</a>
           </div>
         </div>
         <div class="booking__badge">🎉</div>
@@ -153,11 +153,12 @@
       <div>
         <h4>Contact</h4>
         <p><a id="footer-phone" href="tel:+19739076000">(973) 907-6000</a></p>
-        <p><a href="mailto:info@example.com">info@example.com</a></p>
+        <p><a href="mailto:Ramzi.musa500@gmail.com">Ramzi.musa500@gmail.com</a></p>
       </div>
       <div>
         <h4>Quick Links</h4>
         <div class="footer__links">
+          <a href="#home">Home</a>
           <a href="#menu">Menu</a>
           <a href="#booking">Book Us</a>
           <a href="#faq">FAQ</a>
