Add Find Us and Reviews to footer quick links

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
         <div class="footer__links">
           <a href="#home">Home</a>
           <a href="#menu">Menu</a>
+          <a href="#find">Find Us</a>
           <a href="#booking">Book Us</a>
+          <a href="#testimonials">Reviews</a>
           <a href="#faq">FAQ</a>
           <a href="#contact">Contact</a>
         </div>
