Update hours to 11 AM - 9 PM

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container status" id="status-card">
         <div>
           <p class="pill pill--soft">Now Scooping</p>
-          <h2 id="status-text">Open • Closes 9 PM</h2>
+          <h2 id="status-text">Open • 11 AM - 9 PM</h2>
           <p class="muted">Serving Woodland Park, NJ. Call us to find out where we are today!</p>
           <div class="actions">
             <a class="btn btn--primary" id="directions-btn" href="#">📍 Directions</a>
@@ -78,7 +78,7 @@
           <p class="muted">From checking hours to enjoying your swirl.</p>
         </header>
         <div class="grid grid--4" id="steps-grid">
-          <article class="card card--lift"><div class="step">1</div><h3>Check Hours</h3><p>We're usually open until 9 PM.</p></article>
+          <article class="card card--lift"><div class="step">1</div><h3>Check Hours</h3><p>Open 11 AM - 9 PM daily.</p></article>
           <article class="card card--lift"><div class="step">2</div><h3>Call Us</h3><p>Find out where we are today.</p></article>
           <article class="card card--lift"><div class="step">3</div><h3>Find the Truck</h3><p>Look for our colorful truck.</p></article>
           <article class="card card--lift"><div class="step">4</div><h3>Order & Enjoy</h3><p>Pick your favorite treat.</p></article>
@@ -147,7 +147,7 @@
       <div>
         <h4>Visit</h4>
         <p id="footer-address">Woodland Park, NJ</p>
-        <p id="footer-hours" class="muted">Open • Closes 9 PM</p>
+        <p id="footer-hours" class="muted">11 AM - 9 PM</p>
       </div>
       <div>
         <h4>Contact</h4>
