Add service area: Bergen, Morris, Sussex, and Passaic counties

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="hero__text">
           <p class="pill">Soft Serve Truck • Woodland Park, NJ</p>
           <h1>Soft Serve. <span class="gradient">Big Smiles.</span></h1>
-          <p class="lede">Catch our truck in Woodland Park, NJ—classic cones, sundaes, and swirls.</p>
+          <p class="lede">Catch our truck in Woodland Park, NJ—serving Bergen, Morris, Sussex, and Passaic counties. Classic cones, sundaes, and swirls.</p>
           <div class="actions">
             <a class="btn btn--primary" href="#menu">🍦 View Menu</a>
             <a class="btn btn--secondary" id="hero-call" href="tel:+19739076000">📞 Call Now</a>
@@ -48,7 +48,7 @@
         <div>
           <p class="pill pill--soft">Now Scooping</p>
           <h2 id="status-text">Open • 11 AM - 9 PM</h2>
-          <p class="muted">Serving Woodland Park, NJ. Call us to find out where we are today!</p>
+          <p class="muted">Serving Bergen, Morris, Sussex, and Passaic counties. Call us to find out where we are today!</p>
           <div class="actions">
             <a class="btn btn--primary" id="directions-btn" href="#">📍 Directions</a>
             <a class="btn btn--ghost" id="status-call" href="tel:+19739076000">Call (973) 907-6000</a>
@@ -142,7 +142,7 @@
     <div class="container footer__grid">
       <div>
         <h3>Lickety Split</h3>
-        <p class="muted">Soft serve ice cream truck serving Woodland Park, NJ.</p>
+        <p class="muted">Soft serve ice cream truck serving Bergen, Morris, Sussex, and Passaic counties, NJ.</p>
       </div>
       <div>
         <h4>Visit</h4>
