--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <nav class="nav__links" id="nav-links">
       <a href="#home">Home</a>
       <a href="#menu">Menu</a>
-      <a href="#find">Find Us</a>
       <a href="#booking">Book Us</a>
       <a href="#testimonials">Reviews</a>
       <a href="#faq">FAQ</a>
@@ -31,7 +30,7 @@
         <div class="hero__text">
           <p class="pill">Soft Serve Truck • Woodland Park, NJ</p>
           <h1>Soft Serve. <span class="gradient">Big Smiles.</span></h1>
-          <p class="lede">Catch our truck in Woodland Park, NJ—serving Bergen, Morris, Sussex, and Passaic counties. Classic cones, sundaes, and swirls.</p>
+          <p class="lede">Catch our truck around Woodland Park, NJ—classic cones, sundaes, and swirls.</p>
           <div class="actions">
             <a class="btn btn--primary" href="#menu">🍦 View Menu</a>
             <a class="btn btn--secondary" id="hero-call" href="tel:+19739076000">📞 Call Now</a>
@@ -48,7 +47,7 @@
         <div>
           <p class="pill pill--soft">Now Scooping</p>
           <h2 id="status-text">Open • 11 AM - 9 PM</h2>
-          <p class="muted">Serving Bergen, Morris, Sussex, and Passaic counties. Call us to find out where we are today!</p>
+          <p class="muted">Serving Woodland Park, NJ. Call us to find out where we are today!</p>
           <div class="actions">
             <a class="btn btn--primary" id="directions-btn" href="#">📍 Directions</a>
             <a class="btn btn--ghost" id="status-call" href="tel:+19739076000">Call (973) 907-6000</a>
@@ -67,22 +66,6 @@
 
         <div class="tabs" id="menu-tabs"></div>
         <div class="menu-grid" id="menu-items"></div>
-      </div>
-    </section>
-
-    <section id="find" class="section section--tone">
-      <div class="container">
-        <header class="section__header">
-          <p class="pill">Find Us</p>
-          <h2>Four easy steps</h2>
-          <p class="muted">From checking hours to enjoying your swirl.</p>
-        </header>
-        <div class="grid grid--4" id="steps-grid">
-          <article class="card card--lift"><div class="step">1</div><h3>Check Hours</h3><p>Open 11 AM - 9 PM daily.</p></article>
-          <article class="card card--lift"><div class="step">2</div><h3>Call Us</h3><p>Find out where we are today.</p></article>
-          <article class="card card--lift"><div class="step">3</div><h3>Find the Truck</h3><p>Look for our colorful truck.</p></article>
-          <article class="card card--lift"><div class="step">4</div><h3>Order & Enjoy</h3><p>Pick your favorite treat.</p></article>
-        </div>
       </div>
     </section>
 
@@ -142,7 +125,7 @@
     <div class="container footer__grid">
       <div>
         <h3>Lickety Split</h3>
-        <p class="muted">Soft serve ice cream truck serving Bergen, Morris, Sussex, and Passaic counties, NJ.</p>
+        <p class="muted">Soft serve ice cream truck serving Woodland Park, NJ.</p>
       </div>
       <div>
         <h4>Visit</h4>
@@ -159,7 +142,6 @@
         <div class="footer__links">
           <a href="#home">Home</a>
           <a href="#menu">Menu</a>
-          <a href="#find">Find Us</a>
           <a href="#booking">Book Us</a>
           <a href="#testimonials">Reviews</a>
           <a href="#faq">FAQ</a>
